src/modules/base/primitiveVisualPickerTitle/primitiveVisualPickerTitle.css
/**
 * BSD 3-Clause License
 *
 * Copyright (c) 2021, Avonni Labs, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the copyright holder nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

.avonni-visual-picker__figure-title {
    color: var(--avonni-visual-picker-figure-title-text-color, #080707);
    font-style: var(--avonni-visual-picker-figure-title-font-style, normal);
    font-weight: var(--avonni-visual-picker-figure-title-font-weight, 400);
    font-size: var(--avonni-visual-picker-figure-title-font-size, 1.5rem);
    line-height: var(--lwc-lineHeightHeading, 1.25);
    white-space: nowrap;
    text-overflow: ellipsis;
    align-self: center;
}

.avonni-visual-picker__figure-title_small {
    font-weight: var(--avonni-visual-picker-figure-title-font-weight, 300);
    font-size: var(--avonni-visual-picker-figure-title-font-size, 1.125rem);
}

.avonni-primitive-visual-picker-title__icon {
    align-self: center;
}

.avonni-visual-picker__figure-content_alignement {
    display: flex;
    justify-content: var(--avonni-visual-picker-figure-title-alignment, center);
}

